[project]
name = "soil-sampling-campaign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "geohexgrid>=3.0.0",
    "geopandas>=1.1.1",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "rioxarray>=0.19.0",
    "scikit-gstat>=1.0.21",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "vegafusion>=2.0.3",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.8.0",
    "xarray>=2025.9.1",
]
